--- a/src/app/main-component/intro/intro.html
+++ b/src/app/main-component/intro/intro.html
@@ -21,7 +21,7 @@
     </div>
     <div class="hero__media">
         <div class="hero__avatar">
-            <img [src]="user.photoUrl || 'https://ui-avatars.com/api/?name=' + user.name + '&background=1f2937&color=fff&size=256'" alt="avatar">
+            <img [src]="user.photoUrl">
         </div>
         <div class="hero__glow" aria-hidden="true"></div>
     </div>
