--- a/src/app/main-component/contact/contact.css
+++ b/src/app/main-component/contact/contact.css
@@ -1,21 +1,51 @@
 form{
-    display: flex;
+
+    /* max-width: 600px;
+    margin: auto;
+    padding: 1rem;
+    display: grid;
+    gap: 1rem;
+    border-radius: 20px;
+    border: 1px solid rgb(194, 164, 164); */
+    /* display: flex;
     flex-direction: column;
     gap: 10px;
     border: 1px solid rgb(194, 164, 164);
     padding: 20px;
     border-radius: 20px;
-    font-size: 1.2rem;
+    font-size: 1.2rem; */
+
+    max-width: 600px;   
+    width: 100%;        
+    margin: auto;
+    padding: 1rem;
+    display: grid;
+    gap: 1rem;
+    box-sizing: border-box;
+    border-radius: 20px;
+    border: 1px solid beige;
 
     
 
 }
 
+ .form-group {
+    display: flex;
+    flex-direction: column;
+    
+    flex: 1 1 100%;   
+      
+  } 
+
 form input{
     border-radius: 20px;
     padding: 10px;
     border-style: none;
-    margin: 10px;
+    /* margin: 10px; */
+    width: 100%;      
+    max-width: 100%;  
+    box-sizing: border-box;
+
 }
 
 .contact{
@@ -34,3 +64,17 @@ button{
     padding: 20px;
 }
 
+.nameInput{
+    display: flex;
+    flex-direction: row;
+}
+
+.wrong{
+    background-color: brown;
+}
+
+@media (max-width: 768px) {
+    .form-container {
+      padding: 0.5rem;
+    }
+  }
