--- a/src/app/main-component/experience/experience.html
+++ b/src/app/main-component/experience/experience.html
@@ -1,12 +1,10 @@
 <section class="experience">
     <h2 class="experience__title">Experience</h2>
     <div class="experience__list">
-        <div class="experience-card" *ngFor="let xp of experience; let i = index">
-            <div class="">
+        <div class="experience-card" *ngFor="let xp of experience; let i = index"  (mouseenter)="onMouseEnter(i)" (mouseleave)="onMouseLeave()" [ngClass]="(isHover && i == currentIndex)?{glow: {}}:{nonGlow : {}} ">
                 <h3 class="xp-card__company">{{ xp.companyName }}</h3>
                 <span class="xp-card__dates">{{ xp.startDate }} — {{ xp.endDate }}</span>
-            </div>
-            <p class="xp-card__desc">{{ xp.jobDescription }}</p>
+                <p class="xp-card__desc">{{ xp.jobDescription }}</p>
         </div>
     </div>
 </section>
