--- a/src/app/main-component/projects/projects.html
+++ b/src/app/main-component/projects/projects.html
@@ -5,7 +5,7 @@
 <p>Discover the projects that showcase my technical skills</p>
 <div class="project__container">
     @for (project of projects; track project.projectName) {
-        <div class="project-card">
+        <div class="project-card" (mouseenter)="onMouseEnter(project.projectName)" (mouseleave)="onMouseLeave()" [ngClass]="(isHovered && project.projectName == currentProject)?{glow: {}}:{nonGlow : {}}">
             <h3>{{ project.projectName }}</h3>
             <p>{{ project.description }}</p>
             @if (project.github) {
